# d3

./: compose-backends.yaml  compose-dev.yaml  compose-prod.yaml  compose.yaml  concatenate_script.py  concatenated_code.txt
backend/: .env  Dockerfile.agnoapi  README.md  concatenated_code.txt  pyproject.toml  requirements.txt  session.json  test.json
backend/agents/: finance_agent.py  hackernews_agent.py  registry.py  selector.py  web_agent.py
backend/api/: main.py
backend/api/routes/: agents.py  playground.py  v1_router.py
backend/backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/db_json_examples/: memory.json
backend/docker/: Dockerfile_dev  Dockerfile_prod
backend/scripts/: concatenate_script.py  load_agent_knowledge.py  new_agent.sh  new_team.sh  new_tool.sh
backend/src/agents/: agno_agent.py  registry.py  selector.py
backend/src/agents/agno/: builder.py  knowledge.py
backend/src/agents/base/: __init__.py  builder.py
backend/src/agents/hackernews/: builder.py
backend/src/agents/web/: builder.py
backend/src/agents/yfinance/: builder.py
backend/src/api/: main.py  settings.py
backend/src/api/routes/: agents.py  playground.py
backend/src/backend_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/db/: url.py
backend/src/teams/: registry.py  research.py  selector.py
backend/src/teams/base/: __init__.py  builder.py
backend/src/teams/hackernews/: __init__.py  builder.py
backend/src/tools/: __init__.py  registry.py  selector.py
backend/teams/: research.py
(+474 files in other folders)
