[project]
name = "backend-api"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"


dependencies = [
  "agno==1.4.6",
  "duckduckgo-search",
  "fastapi[standard]",
  "openai",
  "pgvector",
  "psycopg[binary]",
  "pytest>=8.3.5",
  "sqlalchemy",
  "sqlmodel>=0.0.24",
  "yfinance",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true


